--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@maptiler/leaflet-maptilersdk": "^4.1.1",
+    "@mui/material": "^7.3.5",
+    "@mui/x-charts": "^8.17.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
